# chiyo_analytics

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  PROJECT.md  README.ja.md  README.md  README.zh.md  ROAD_TO_V1.md  ROAD_TO_V2.md  chiyo_analytics.toml  docker-compose.yaml  go.mod  go.sum  mng.py  pyproject.toml
.github/workflows/: release-check.yaml  release.yaml
backend/: .gitignore
cyanly-preinstall/: chiyo_analytics.toml
dashboard/: AGENTS.md  package.json  pnpm-lock.yaml
dashboard/src/: proxy.ts  types.ts
deployment/: .gitignore  CONTRIBUTING.md  PROJECT.md  README.md  build.py  cyanly.py  install-cyanly.py  pyproject.toml
deployment/common/: i18n.py
deployment/common/translations/: en.json  ja.json  zh.json
deployment/k8s/: README.md
deployment/single_server_docker/: README.md  backend.Dockerfile  chiyo_analytics.toml  dashboard.Dockerfile  docker-compose.yaml  installer.py  manage.py
deployment/tests/: conftest.py  test_installer.py
deployment/tests/__snapshots__/: test_installer.ambr
examples/hosting_server/: Caddyfile  nginx.conf
examples/nextjs/: next.config.ts  package.json  pnpm-lock.yaml
examples/vite_react_router/: dev.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
examples/web/: package.json  pnpm-lock.yaml  (+2 more)
mng_scripts/: cleaner.py  dev_runner.py  e2e_runner.py  geoip_mng.py  release.py  service_manager.py  tui.py
sdk_js/: README.md  eslint.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  tsdown.config.ts
tests/: package.json  pnpm-lock.yaml  tsconfig.json
(+180 files in other folders)
