[project]
name = "chiyo-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "fire>=0.7.1",
    "rich>=15.0.0",
    "psutil>=7.2.2",
    "maxminddb>=3.1.1",
    "shiv>=1.0.8",
    "questionary>=2.1.1",
    "pytest>=9.1.1",
    "syrupy>=5.4.0",
    "pre-commit>=4.6.0",
]
