[project]
name = "cyanly-installer"
version = "1.1.1"
dependencies = [
    "rich>=15.0.0",
    "ruamel.yaml>=0.19.1,<0.20",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["install-cyanly", "cyanly"]
packages = ["single_server_docker", "common"]

[tool.setuptools.package-data]
single_server_docker = ["chiyo_analytics.toml", "docker-compose.yaml", "cyanly.pyz"]
common = ["translations/*.json"]
